# spyder-updater

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: build-updater.yml
recipe/: bld.bat  build.sh  meta.yaml
spyder_updater/: __init__.py  start-update.py  start.py  updater.py  utils.py
spyder_updater/assets/: info-schema.json
spyder_updater/gui/: utils.py
src/spyder_updater/: __init__.py  start.py
src/spyder_updater/gui/: __init__.py  updater.py
src/spyder_updater/gui/assets/: info-schema.json
src/spyder_updater/scripts/: install.bat  install.sh
src/tests/: failure.sh  info-error.json  info-success.json
tests/: info-failure.json  info-success.json  success.sh
