[build-system]
requires = ["setuptools>=61.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spyder-updater"
description = "Package to update the Spyder standalone installers"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = []
authors = [
  { name = "Spyder Development Team and spyder-updater contributors", email = "spyder.python@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "jsonschema",
  "pyqt5",
  "qdarkstyle",
  "qstylizer",
  "qtawesome",
  "qtpy",
  "superqt",
]
dynamic = ["version"]

[project.urls]
Issues = "https://github.com/spyder-ide/spyder-updater/issues"
Source = "https://github.com/spyder-ide/spyder-updater"

[tool.setuptools.dynamic]
version = {attr = "spyder_updater.__version__"}

[project.scripts]
spyder-updater = "spyder_updater.start:main"
